--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,17 +27,30 @@
     </nav>
 
     <section class="banner">
-        <div class="typing-text">I'm a beginner IT engineer Choi Jong-in.</div>
-        <p class="typing"></p>
+        <div class="typing-text">I'm a beginner IT engineer Choi Jong-in.</div>        
+        <p class="typing"></p>        
     </section>
 
     <section class="content">
         <div class="introduce">
+            <div class="introduce__image">
+                <img src="./image/user_img.jpg" alt="">
+            </div>
 
+            <ul class="introduce__info">
+                <li>이름</li>
+                <li>취미</li>
+                <li>좌우명</li>
+                <li>블라블라</li>
+                <li>블라블라</li>
+            </ul>
         </div>
 
         <div class="skill">
-
+            <div class="backEnd"></div>
+            <div class="frontEnd"></div>
+            <div class="framework"></div>
+            <div class="DevOps"></div>
         </div>
 
         <div class="project">
