portfolio -> modify layout

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,6 +11,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a name="main"></a>
     <nav class="header">
         <div class="header__logo">
             <i class="far fa-address-card"></i>
@@ -19,11 +20,11 @@
         
 
         <ul class="menu">
-            <li><a href="#">main</a></li>
-            <li><a href="#">introducion</a></li>
-            <li><a href="#">skill</a></li>
-            <li><a href="#">project</a></li>
-            <li><a href="#">contect</a></li>
+            <li><a href="#main">main</a></li>
+            <li><a href="#introduce">introducion</a></li>
+            <li><a href="#skill">skill</a></li>
+            <li><a href="#project">project</a></li>
+            <li><a href="#contect">contect</a></li>
         </ul>
     </nav>
 
@@ -33,6 +34,7 @@
     </section>
 
     <section class="content">
+        <a name="introduce"></a>
         <div class="introduce">
             <div class="introduce__image">
                 <img src="./image/user_img.jpg" alt="">
@@ -52,6 +54,7 @@
             </ul>
         </div>
 
+        <a name="skill"></a>
         <div class="skill">
             <div class="backEnd"></div>
             <div class="frontEnd"></div>
@@ -59,6 +62,8 @@
             <div class="DevOps"></div>
         </div>
 
+        <!-- slide -->
+        <a name="project"></a>
         <div class="project">
             <div class="section">
                 <div class="slidewrap">
@@ -96,8 +101,16 @@
         </div>
     </section>
 
+    <a name="contect"></a>
     <section class="footer">
-
+        <div class="contect">
+            <p>CONTECT</p>
+            <ul class="contectList">
+                <li><a href="#"><i class="fab fa-github"></i>github</a></li>
+                <li><a href="#"><i class="fas fa-blog"></i>blog</a></li>
+                <li></li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
