portfolio -> add footer

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,7 +104,7 @@
     <a name="contect"></a>
     <section class="footer">
         <div class="contect">
-            <p>CONTECT</p>
+            <p class="title">CONTECT</p>
             <ul class="contectList">
                 <li><a href="#"><i class="fab fa-github"></i>github</a></li>
                 <li><a href="#"><i class="fas fa-blog"></i>blog</a></li>
