--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,7 @@
     <script src="main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1877f468c8.js" crossorigin="anonymous"></script>
+    <script src="jquery-3.6.0.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -109,11 +110,17 @@
         </div>
     </section>
 
+    <div class="topBtn" onclick="$('html, body').animate({scrollTop:$('.header')} );">
+        <div><i class="far fa-hand-point-up"></i></div>
+        <span>Top</span>
+    </div>
+
     <a name="contect"></a>
     <section class="footer">
         <div class="contect">
             <p class="title">CONTECT</p>
             <ul class="contectList">
+                <li><i class="fas fa-envelope-open-text"></i>bill1224@naver.com</li>
                 <li><a href="#"><i class="fab fa-github"></i>github</a></li>
                 <li><a href="#"><i class="fas fa-blog"></i>blog</a></li>
                 <li></li>
