--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,6 @@
             <i class="far fa-address-card"></i>
             <span>Jongin</span>
         </div>
-        
 
         <ul class="menu">
             <li><a href="#main">main</a></li>
@@ -27,6 +26,9 @@
             <li><a href="#project">project</a></li>
             <li><a href="#contect">contect</a></li>
         </ul>
+        <div class="menu_bars">
+            <i class="fas fa-bars"></i>
+        </div>
     </nav>
 
     <section class="banner">
