--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -123,8 +123,8 @@
             <p class="title">CONTECT</p>
             <ul class="contectList">
                 <li><i class="fas fa-envelope-open-text"></i>bill1224@naver.com</li>
-                <li><a href="#"><i class="fab fa-github"></i>github</a></li>
-                <li><a href="#"><i class="fas fa-blog"></i>blog</a></li>
+                <li><a href="https://github.com/jongin1004"><i class="fab fa-github"></i>github</a></li>
+                <li><a href="https://bill1224.tistory.com/"><i class="fas fa-blog"></i>blog</a></li>
                 <li></li>
             </ul>
         </div>
