--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,10 +59,30 @@
 
         <a name="skill"></a>
         <div class="skill">
-            <div class="backEnd"></div>
-            <div class="frontEnd"></div>
-            <div class="framework"></div>
-            <div class="DevOps"></div>
+            <div class="backEnd container">
+                <h3>backEnd</h3>
+                <div>
+                    <i class="fab fa-php"></i>
+                </div>
+            </div>
+            <div class="frontEnd">
+                <h3>frontEnd</h3>
+                <div>
+                    <i class="fab fa-html5"></i>
+                </div>
+            </div>
+            <div class="framework">
+                <h3>framework</h3>
+                <div class="skill_icons">
+                    <i class="fab fa-laravel"></i>
+                </div>
+            </div>
+            <div class="DevOps">
+                <h3>DevOps</h3>
+                <div>
+                    <i class="fab fa-github"></i>
+                </div>
+            </div>
         </div>
 
         <!-- slide -->
