--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,9 @@
     <script src="main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1877f468c8.js" crossorigin="anonymous"></script>
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="jquery-3.6.0.min.js">
+        
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -149,5 +151,15 @@
             </ul>
         </div>
     </section>
+
+    <script>
+        $(window).on('scroll', function () {
+                if($(window).scrollTop() > 900) {
+                    $(".topBtn").css("opacity", "1");
+                } else {
+                    $(".topBtn").css("opacity", "0");
+                }
+            });
+    </script>
 </body>
 </html>
