--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,49 +40,51 @@
 
     <section class="content">
         <a name="introduce"></a>
+        <h1 style="text-align: center">About Me</h1>
         <div class="introduce">
             <div class="introduce__image">
                 <img src="./image/user_img.jpg" alt="">
             </div>
 
             <ul class="introduce__info">
-                <li>이름</li>
-                <li>취미</li>
-                <li>좌우명</li>
-                <li><i class="fas fa-chevron-left"></i></li>
-                <li><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
-                    class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                    <path fill="currentColor"
-                        d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
-                    </path>
-                </svg></li>
+                <li>이름 : </li>
+                <li>취미 : 코딩, 탁구</li>
+                <li>좌우명 : 시간은 배신하지 않는다</li>
+                <li>실패에 두려워하지 않고, 새로운 것에 도전해 나가는 IT 엔지니어를 꿈꾸고 있습니다. </li>
             </ul>
         </div>
 
         <a name="skill"></a>
         <div class="skill">
             <div class="backEnd container">
-                <h3>backEnd</h3>
+                <h1>backEnd</h1>
                 <div>
                     <i class="fab fa-php"></i>
+                    <i class="fab fa-python"></i>
                 </div>
             </div>
             <div class="frontEnd">
-                <h3>frontEnd</h3>
+                <h1>frontEnd</h1>
                 <div>
                     <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-js-square"></i>
                 </div>
             </div>
             <div class="framework">
-                <h3>framework</h3>
+                <h1>framework</h1>
                 <div class="skill_icons">
                     <i class="fab fa-laravel"></i>
+                    <i class="fab fa-vuejs"></i>
+                    <i class="far fa-gem"></i>
                 </div>
             </div>
             <div class="DevOps">
-                <h3>DevOps</h3>
+                <h1>DevOps</h1>
                 <div>
                     <i class="fab fa-github"></i>
+                    <i class="fab fa-docker"></i>
+                    <i class="fab fa-aws"></i>
                 </div>
             </div>
         </div>
