--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -39,23 +39,27 @@
     </section>
 
     <section class="content">
-        <a name="introduce"></a>
-        <h1 style="text-align: center">About Me</h1>
+        <a name="introduce"></a>                 
         <div class="introduce">
-            <div class="introduce__image">
-                <img src="./image/user_img.jpg" alt="">
-            </div>
-
-            <ul class="introduce__info">
-                <li>이름 : </li>
-                <li>취미 : 코딩, 탁구</li>
-                <li>좌우명 : 시간은 배신하지 않는다</li>
-                <li>실패에 두려워하지 않고, 새로운 것에 도전해 나가는 IT 엔지니어를 꿈꾸고 있습니다. </li>
-            </ul>
+            <h1 class="title">About Me</h1>
+            <div class="introduce_info">
+                <div class="info_image">
+                    <img src="./image/user_img.jpg" alt="">
+                </div>
+                
+                <ul class="info_content">
+                    <li>이름 : </li>
+                    <li>취미 : 코딩, 탁구</li>
+                    <li>좌우명 : 시간은 배신하지 않는다</li>
+                    <li>실패에 두려워하지 않고, 새로운 것에 도전해 나가는 IT 엔지니어를 꿈꾸고 있습니다. </li>
+                </ul>
+            </div>            
         </div>
 
         <a name="skill"></a>
+        
         <div class="skill">
+            <h1 style="text-align: center; padding: 128px;">SKILL STACK</h1>
             <div class="backEnd container">
                 <h1>backEnd</h1>
                 <div>
@@ -90,8 +94,9 @@
         </div>
 
         <!-- slide -->
-        <a name="project"></a>
+        <a name="project"></a>        
         <div class="project">
+            <h1 style="text-align: center; padding: 128px">PROJECT</h1>
             <div class="section">
                 <div class="slidewrap">
                     <input type="radio" name="slide" id="slide01" checked>
