--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -32,7 +32,8 @@
 
     <div class="container">
         <div class="banner">
-            
+            <div class="typing-text">Hello, I'm beginner IT engineer.</div>
+            <div class="typing"></div>
         </div>
 
         <div class="aboutMe">
