--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -37,7 +37,17 @@
         </div>
 
         <div class="aboutMe">
-
+            <h1>About Me</h1>
+            <div class="content">
+                <div class="my_image">
+                    
+                </div>
+                <div class="info">
+                    <div class="name">name : Jong-In</div>
+                    <div class="hobby">hobby : coding, ping-pong</div>
+                    <div class="motto">motto : Don't be afraid of failure. Let's try it!</div>
+                </div>
+            </div>
         </div>
 
         <div class="skill">
