--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -12,6 +12,7 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <!-- header -->
     <nav class="header">
         <div class="header_logo">
             <i class="far fa-address-card"></i>
@@ -31,11 +32,13 @@
     </nav>
 
     <div class="container">
+        <!-- banner -->
         <div class="banner">
             <div class="typing-text">Hello, I'm beginner IT engineer.</div>
             <div class="typing"></div>
         </div>
 
+        <!-- about me -->
         <div class="aboutMe">
             <h1>About Me</h1>
             <div class="content">
@@ -55,7 +58,25 @@
         </div>
 
         <div class="project">
+            <div class="slideWrab">
+                <input type="radio" id="slide1" name="slide" id="slide1">
+                <input type="radio" id="slide2" name="slide" id="slide2">
+                <input type="radio" id="slide3" name="slide" id="slide3">
 
+                <div class="slideList">
+                    <ul>
+                        <li>
+                            <img src="./image/project1.png">
+                        </li>
+                        <li>
+                            <img src="./image/project2.png">
+                        </li>
+                        <li>
+                            <img src="./image/project3.png">
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
