--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -59,10 +59,15 @@
 
         <div class="project">
             <div class="slideWrab">
-                <input type="radio" id="slide1" name="slide" id="slide1">
-                <input type="radio" id="slide2" name="slide" id="slide2">
-                <input type="radio" id="slide3" name="slide" id="slide3">
-
+                <input type="radio" id="slide1" name="slide" class="slide" checked>
+                <input type="radio" id="slide2" name="slide" class="slide">
+                <input type="radio" id="slide3" name="slide" class="slide">
+                      
+                <div class="radio_label">
+                    <label for="slide1" class="radioImage"></label>
+                    <label for="slide2" class="radioImage"></label>
+                    <label for="slide3" class="radioImage"></label>                    
+                </div>
                 <div class="slideList">
                     <ul>
                         <li>
