--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -58,17 +58,18 @@
         </div>
 
         <div class="project">
+            <h1>PROJECT</h1>
             <div class="slideWrab">
                 <input type="radio" id="slide1" name="slide" class="slide" checked>
                 <input type="radio" id="slide2" name="slide" class="slide">
                 <input type="radio" id="slide3" name="slide" class="slide">
-                      
-                <div class="radio_label">
-                    <label for="slide1" class="radioImage"></label>
-                    <label for="slide2" class="radioImage"></label>
-                    <label for="slide3" class="radioImage"></label>                    
-                </div>
+                    
                 <div class="slideList">
+                    <div class="radio_label">
+                        <label for="slide1" class="radioImage"></label>
+                        <label for="slide2" class="radioImage"></label>
+                        <label for="slide3" class="radioImage"></label>
+                    </div>
                     <ul>
                         <li>
                             <img src="./image/project1.png">
@@ -86,7 +87,15 @@
     </div>
 
     <div class="footer">
-
+        <span>contect</span>
+        <ul class="contect_list">
+            <li><i class="fas fa-envelope-open-text"></i><p>bill1224@naver.com</p></li>
+            <div class="contect_icons">
+                <li><a href="https://github.com/jongin1004"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://bill1224.tistory.com/"><i class="fas fa-blog"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC0xxXkIx7uTOQ11-fUEx6kA"><i class="fab fa-youtube"></i></a></li>
+            </div>
+        </ul>
     </div>
 </body>
 </html>
