skill -> content and animation

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -54,7 +54,72 @@
         </div>
 
         <div class="skill">
-
+            <h1>Skill Stack</h1>
+            <div class="frontEnd">
+                <p class="title">Front End</p>
+                <ul class="stackList">
+                    <li>
+                        <i class="fab fa-html5"></i>
+                        <div class="captin">HTML5</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-css3-alt"></i>
+                        <div class="captin">CSS3</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-js-square"></i>
+                        <div class="captin">JS</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="BackEnd">
+                <p class="title">Back End</p>
+                <ul class="stackList">
+                    <li>
+                        <i class="fab fa-php"></i>
+                        <div class="captin">PHP</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-python"></i>
+                        <div class="captin">Python</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="frameWork">
+                <p class="title">FrameWork</p>
+                <div class="test"></div>
+                <ul class="stackList">
+                    <li>
+                        <i id="demo" class="fab fa-laravel"></i>
+                        <div class="captin">Laravel</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-vuejs"></i>
+                        <div class="captin">Vue.js</div>
+                    </li>
+                    <li>
+                        <i class="far fa-gem"></i>
+                        <div class="captin">Ruby on Rails</div>
+                    </li>
+                </ul>
+            </div>
+            <dv class="DevOps">
+                <p class="title">DevOps</p>
+                <ul class="stackList">
+                    <li>
+                        <i class="fab fa-github"></i>
+                        <div class="captin">Git</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-docker"></i>
+                        <div class="captin">Docker</div>
+                    </li>
+                    <li>
+                        <i class="fab fa-aws"></i>
+                        <div class="captin">AWS</div>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="project">
