add total animation and add topBtn

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -19,11 +19,11 @@
             <span>JongIn</span>
         </div>
         <ul class="header_menu">
-            <li><a href="#">Main</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skill</a></li>
-            <li><a href="#">Project</a></li>
-            <li><a href="#">Contect</a></li>
+            <li><a href="#banner">Main</a></li>
+            <li><a href="#aboutMe">About</a></li>
+            <li><a href="#skill">Skill</a></li>
+            <li><a href="#project">Project</a></li>
+            <li><a href="#contect">Contect</a></li>
         </ul>
 
         <div class="menu_bar">
@@ -33,12 +33,14 @@
 
     <div class="container">
         <!-- banner -->
+        <a name="banner"></a>
         <div class="banner">
             <div class="typing-text">Hello, I'm beginner IT engineer.</div>
             <div class="typing"></div>
         </div>
 
         <!-- about me -->
+        <a name="aboutMe"></a>
         <div class="aboutMe">
             <h1>About Me</h1>
             <div class="content">
@@ -53,6 +55,7 @@
             </div>
         </div>
 
+        <a name="skill"></a>
         <div class="skill">
             <h1>Skill Stack</h1>
             <div class="frontEnd">
@@ -122,6 +125,8 @@
             </div>
         </div>
 
+        <!-- project -->
+        <a name="project"></a>
         <div class="project">
             <h1>PROJECT</h1>
             <div class="slideWrab">
@@ -131,7 +136,7 @@
                     
                 <div class="slideList">
                     <div class="radio_label">
-                        <label for="slide1" class="radioImage"></label>
+                        <label for="slide1" class="radioImage active"></label>
                         <label for="slide2" class="radioImage"></label>
                         <label for="slide3" class="radioImage"></label>
                     </div>
@@ -151,6 +156,13 @@
         </div>
     </div>
 
+    <div class="topBtn" onclick="Scroll()">
+        <i class="far fa-hand-point-up"></i>
+        <span>Top</span>
+    </div>
+    
+    <!-- contect -->
+    <a name="contect"></a>
     <div class="footer">
         <span>contect</span>
         <ul class="contect_list">
