--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,9 +44,7 @@
         <div class="aboutMe">
             <h1>About Me</h1>
             <div class="content">
-                <div class="my_image">
-                    
-                </div>
+                <div class="my_image"></div>
                 <div class="info">
                     <div class="name">name : Jong-In</div>
                     <div class="hobby">hobby : coding, ping-pong</div>
@@ -58,70 +56,76 @@
         <a name="skill"></a>
         <div class="skill">
             <h1>Skill Stack</h1>
-            <div class="frontEnd">
-                <p class="title">Front End</p>
-                <ul class="stackList">
-                    <li>
-                        <i class="fab fa-html5"></i>
-                        <div class="captin">HTML5</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-css3-alt"></i>
-                        <div class="captin">CSS3</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-js-square"></i>
-                        <div class="captin">JS</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="BackEnd">
-                <p class="title">Back End</p>
-                <ul class="stackList">
-                    <li>
-                        <i class="fab fa-php"></i>
-                        <div class="captin">PHP</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-python"></i>
-                        <div class="captin">Python</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="frameWork">
-                <p class="title">FrameWork</p>
-                <div class="test"></div>
-                <ul class="stackList">
-                    <li>
-                        <i id="demo" class="fab fa-laravel"></i>
-                        <div class="captin">Laravel</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-vuejs"></i>
-                        <div class="captin">Vue.js</div>
-                    </li>
-                    <li>
-                        <i class="far fa-gem"></i>
-                        <div class="captin">Ruby on Rails</div>
-                    </li>
-                </ul>
-            </div>
-            <dv class="DevOps">
-                <p class="title">DevOps</p>
-                <ul class="stackList">
-                    <li>
-                        <i class="fab fa-github"></i>
-                        <div class="captin">Git</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-docker"></i>
-                        <div class="captin">Docker</div>
-                    </li>
-                    <li>
-                        <i class="fab fa-aws"></i>
-                        <div class="captin">AWS</div>
-                    </li>
-                </ul>
+            <div class="stack_container">
+                <div class="part1">
+                    <div class="frontEnd">
+                        <p class="title">Front End</p>
+                        <ul class="stackList">
+                            <li>
+                                <i class="fab fa-html5"></i>
+                                <div class="captin">HTML5</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-css3-alt"></i>
+                                <div class="captin">CSS3</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-js-square"></i>
+                                <div class="captin">JS</div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="BackEnd">
+                        <p class="title">Back End</p>
+                        <ul class="stackList">
+                            <li>
+                                <i class="fab fa-php"></i>
+                                <div class="captin">PHP</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-python"></i>
+                                <div class="captin">Python</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="part2">
+                    <div class="frameWork">
+                        <p class="title">FrameWork</p>
+                        <div class="test"></div>
+                        <ul class="stackList">
+                            <li>
+                                <i id="demo" class="fab fa-laravel"></i>
+                                <div class="captin">Laravel</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-vuejs"></i>
+                                <div class="captin">Vue.js</div>
+                            </li>
+                            <li>
+                                <i class="far fa-gem"></i>
+                                <div class="captin">Ruby on Rails</div>
+                            </li>
+                        </ul>
+                    </div>
+                    <dv class="DevOps">
+                        <p class="title">DevOps</p>
+                        <ul class="stackList">
+                            <li>
+                                <i class="fab fa-github"></i>
+                                <div class="captin">Git</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-docker"></i>
+                                <div class="captin">Docker</div>
+                            </li>
+                            <li>
+                                <i class="fab fa-aws"></i>
+                                <div class="captin">AWS</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -156,6 +160,7 @@
         </div>
     </div>
 
+    <!-- top button -->
     <div class="topBtn" onclick="Scroll()">
         <i class="far fa-hand-point-up"></i>
         <span>Top</span>
