--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -146,15 +146,31 @@
                     </div>
                     <ul>
                         <li>
-                            <img src="./image/project1.png">
+                            <img src="./image/project1.png" class="projectImg">
                         </li>
                         <li>
-                            <img src="./image/project2.png">
+                            <img src="./image/project2.png" class="projectImg">
                         </li>
                         <li>
-                            <img src="./image/project3.png">
+                            <img src="./image/project3.png" class="projectImg">
                         </li>
                     </ul>
+                </div>
+            </div>
+            <!-- modal -->
+            <div class="modal">
+                <div class="modal_content">
+                    <div class="modalContent">
+                        <p class="title">프로젝트 설명</p>
+                        <div class="description">
+                            <div class="image"></div>
+                            <div class="summary">개요 : ~~~</div>
+                            <div class="function">기능 : ~~</div>
+                            <div class="usedSkill">사용한 스킬 : ~~</div>                            
+                        </div>
+                    </div>
+                    <div class="close"><i class="fas fa-times" id="close"></i></div>
+                    <p class="content_target"></p>
                 </div>
             </div>
         </div>
