--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -160,15 +160,13 @@
             <!-- modal -->
             <div class="modal">
                 <div class="modal_content">
-                    <div class="modalContent">
-                        <p class="title">프로젝트 설명</p>
-                        <div class="description">
-                            <div class="image"></div>
-                            <div class="summary">개요 : ~~~</div>
-                            <div class="function">기능 : ~~</div>
-                            <div class="usedSkill">사용한 스킬 : ~~</div>                            
-                        </div>
-                    </div>
+                    <ul class="modalContent">
+                        <li class="title">프로젝트 제목</li>                        
+                        <li class="modal_image"></li>
+                        <li class="summary">개요 : ~~~</li>
+                        <li class="function">기능 : ~~</li>
+                        <li class="usedSkill">사용한 스킬 : ~~</li>                                                    
+                    </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                     <p class="content_target"></p>
                 </div>
