portfolio -> change CSS of total

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -146,13 +146,13 @@
                     </div>
                     <ul>
                         <li>
-                            <img src="./image/project1.png" class="projectImg">
+                            <img src="./image/yourima.gif" class="projectImg">
                         </li>
                         <li>
-                            <img src="./image/project2.png" class="projectImg">
+                            <img src="./image/ToDoList.gif" class="projectImg">
                         </li>
                         <li>
-                            <img src="./image/project3.png" class="projectImg">
+                            <img src="./image/GUI.gif" class="projectImg">
                         </li>
                     </ul>
                 </div>
