--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -160,15 +160,30 @@
             <!-- modal -->
             <div class="modal">
                 <div class="modal_content">
-                    <ul class="modalContent">
+                    <ul class="modalContent active">
                         <li class="title">프로젝트 제목</li>                        
-                        <li class="modal_image"></li>
+                        <li class="modal_image1"></li>
                         <li class="summary">개요 : ~~~</li>
                         <li class="function">기능 : ~~</li>
                         <li class="usedSkill">사용한 스킬 : ~~</li>                                                    
                     </ul>
+
+                    <ul class="modalContent">
+                        <li class="title">프로젝트 제목2</li>
+                        <li class="modal_image2"></li>
+                        <li class="summary">개요 : ~~~</li>
+                        <li class="function">기능 : ~~</li>
+                        <li class="usedSkill">사용한 스킬 : ~~</li>
+                    </ul>
+
+                    <ul class="modalContent">
+                        <li class="title">프로젝트 제목3</li>
+                        <li class="modal_image3"></li>
+                        <li class="summary">개요 : ~~~</li>
+                        <li class="function">기능 : ~~</li>
+                        <li class="usedSkill">사용한 스킬 : ~~</li>
+                    </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
-                    <p class="content_target"></p>
                 </div>
             </div>
         </div>
