add project content

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -144,9 +144,10 @@
                         <label for="slide2" class="radioImage"></label>
                         <label for="slide3" class="radioImage"></label>
                     </div>
-                    <ul>
+                    <ul class="image_container">
                         <li>
                             <img src="./image/yourima.gif" class="projectImg">
+                            <!-- <div class="modalCaptin">Ruby on Rails</div> -->
                         </li>
                         <li>
                             <img src="./image/ToDoList.gif" class="projectImg">
@@ -161,27 +162,27 @@
             <div class="modal">
                 <div class="modal_content">
                     <ul class="modalContent active">
-                        <li class="title">프로젝트 제목</li>                        
+                        <li class="title">Yourima 중고품 EC Site</li>                        
                         <li class="modal_image1"></li>
-                        <li class="summary">개요 : ~~~</li>
-                        <li class="function">기능 : ~~</li>
-                        <li class="usedSkill">사용한 스킬 : ~~</li>                                                    
+                        <li class="summary">개요 : 잡화점을 운영하는 의뢰인으로부터, 사업을 확대해 유저끼리 상품을 매매할 수 있는 사이트를 운영하고 싶다는 의뢰를 받아 제작했습니다.</li>
+                        <li class="function">담당기능 : 실시간 1대1 채팅기능, Email검증 기능, 그 밖에 여러 화면 및 추가기능</li>
+                        <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>                                                    
                     </ul>
 
                     <ul class="modalContent">
-                        <li class="title">프로젝트 제목2</li>
+                        <li class="title">To Do WepApp</li>
                         <li class="modal_image2"></li>
-                        <li class="summary">개요 : ~~~</li>
-                        <li class="function">기능 : ~~</li>
-                        <li class="usedSkill">사용한 스킬 : ~~</li>
+                        <li class="summary">개요 : Vue.js의 공부를 겸해 스스로 사용하고 싶은 ToDo Wep App을 만들고 싶어서 제작했습니다.<li>
+                        <li class="function">기능 : ToDo 작성, 중요도 관리, 그룹관리, 패턴지정<li>
+                        <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>
                     </ul>
 
                     <ul class="modalContent">
-                        <li class="title">프로젝트 제목3</li>
+                        <li class="title">GUI 이미지파일 편집</li>
                         <li class="modal_image3"></li>
-                        <li class="summary">개요 : ~~~</li>
-                        <li class="function">기능 : ~~</li>
-                        <li class="usedSkill">사용한 스킬 : ~~</li>
+                        <li class="summary">개요 : 여러가지 사진을 통합하여 편하게 관리할 수 있도록 편집해주는 프로그램을 제작해보고 싶었습니다. </li>
+                        <li class="function">기능 : 여러 이미지를 통합해서 하나의 사진으로 만듦, 간격 조정, 여백 생성, 파일 포멧 변경</li>
+                        <li class="usedSkill">사용한 스킬 : python(tkinter)</li>
                     </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                 </div>
