--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,12 +44,15 @@
         <div class="aboutMe">
             <h1>About Me</h1>
             <div class="content">
-                <div class="my_image"></div>
-                <div class="info">
-                    <div class="name">name : Jong-In</div>
-                    <div class="hobby">hobby : coding, ping-pong</div>
-                    <div class="motto">motto : Don't be afraid of failure. Let's try it!</div>
-                </div>
+                <!-- <div class="my_image">                    
+                </div> -->
+                <ul class="info">
+                    <li class="name">이름 : 최종인</li>
+                    <li class="hobby">취미 : 코딩, 탁구</li>
+                    <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
+                    <li class="think">저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</li>
+                    <li class="think">그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</li>                    
+                </ul>
             </div>
         </div>
 
@@ -146,8 +149,7 @@
                     </div>
                     <ul class="image_container">
                         <li>
-                            <img src="./image/yourima.gif" class="projectImg">
-                            <!-- <div class="modalCaptin">Ruby on Rails</div> -->
+                            <img src="./image/yourima.gif" class="projectImg">                            
                         </li>
                         <li>
                             <img src="./image/ToDoList.gif" class="projectImg">
@@ -161,7 +163,7 @@
             <!-- modal -->
             <div class="modal">
                 <div class="modal_content">
-                    <ul class="modalContent active">
+                    <ul class="modalContent">
                         <li class="title">Yourima 중고품 EC Site</li>                        
                         <li class="modal_image1"></li>
                         <li class="summary">개요 : 잡화점을 운영하는 의뢰인으로부터, 사업을 확대해 유저끼리 상품을 매매할 수 있는 사이트를 운영하고 싶다는 의뢰를 받아 제작했습니다.</li>
@@ -181,8 +183,8 @@
                         <li class="title">GUI 이미지파일 편집</li>
                         <li class="modal_image3"></li>
                         <li class="summary">개요 : 여러가지 사진을 통합하여 편하게 관리할 수 있도록 편집해주는 프로그램을 제작해보고 싶었습니다. </li>
-                        <li class="function">기능 : 여러 이미지를 통합해서 하나의 사진으로 만듦, 간격 조정, 여백 생성, 파일 포멧 변경</li>
-                        <li class="usedSkill">사용한 스킬 : python(tkinter)</li>
+                        <li class="function">기능 : 여러 이미지를 통합해서 하나의 사진으로 만듦, 간격 조정, 여백 생성, 파일 포멧 변경</li> 
+                        <li class="usedSkill">사용한 스킬 : Python(tkinter)</li> 
                     </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                 </div>
