--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,14 +44,12 @@
         <div class="aboutMe">
             <h1>About Me</h1>
             <div class="content">
-                <!-- <div class="my_image">                    
-                </div> -->
+                <div class="my_image"></div>
                 <ul class="info">
-                    <li class="name">이름 : 최종인</li>
+                    <li class="name">백엔드 개발자를 꿈 꾸고 있는 <strong>최종인</strong>입니다.</li>
                     <li class="hobby">취미 : 코딩, 탁구</li>
                     <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
-                    <li class="think">저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</li>
-                    <li class="think">그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</li>                    
+                    <li class="think"><p>저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</p><br><p>그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</p></li>                
                 </ul>
             </div>
         </div>
@@ -88,6 +86,10 @@
                             <li>
                                 <i class="fab fa-python"></i>
                                 <div class="captin">Python</div>
+                            </li>
+                            <li>
+                                <i class="far fa-gem"></i>
+                                <div class="captin">Ruby</div>
                             </li>
                         </ul>
                     </div>
