--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -42,19 +42,27 @@
         <!-- about me -->
         <a name="aboutMe"></a>
         <div class="aboutMe">
-            <h1>About Me</h1>
+            <span>About Me</span>
             <div class="content">
                 <div class="my_image"></div>
-                <ul class="info">
-                    <li class="name">백엔드 개발자를 꿈 꾸고 있는 <strong>최종인</strong>입니다.</li>
-                    <li class="hobby">취미 : 코딩, 탁구</li>
-                    <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
-                    <li class="think"><p>저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</p><br><p>그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</p></li>                
-                </ul>
+                <div class="info">
+                    <ul class="persnal_info">
+                        <li class="name">백엔드 개발자를 꿈 꾸고 있는 <strong>최종인</strong>입니다.</li>
+                        <li class="hobby">취미 : 코딩, 탁구</li>
+                        <!-- <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
+                                        <li class="think"><p>저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</p><br><p>그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</p></li>                 -->
+                    </ul>
+                    <ul class="certification_info">
+                        <span class="title">Certification</span>
+                        <li>정보처리기사</li>
+                        <li>JLPT N1</li>
+                        <li>TOEIC 670점</li>
+                    </ul>
+                </div>                
             </div>
         </div>
 
-        <a name="skill"></a>
+        <!-- <a name="skill"></a>
         <div class="skill">
             <h1>Skill Stack</h1>
             <div class="stack_container">
@@ -132,7 +140,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- project -->
         <a name="project"></a>
@@ -163,12 +171,13 @@
                 </div>
             </div>
             <!-- modal -->
-            <div class="modal">
+            <!-- <div class="modal">
                 <div class="modal_content">
                     <ul class="modalContent">
                         <li class="title">Yourima 중고품 EC Site</li>                        
                         <li class="modal_image1"></li>
                         <li class="summary">개요 : 잡화점을 운영하는 의뢰인으로부터, 사업을 확대해 유저끼리 상품을 매매할 수 있는 사이트를 운영하고 싶다는 의뢰를 받아 제작했습니다.</li>
+                        <li class="dev_date">개발기간 : 2021. 01. 19 ~ 2021. 02. 16</li>
                         <li class="function">담당기능 : 실시간 1대1 채팅기능, Email검증 기능, 그 밖에 여러 화면 및 추가기능</li>
                         <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>                                                    
                     </ul>
@@ -177,6 +186,7 @@
                         <li class="title">To Do WepApp</li>
                         <li class="modal_image2"></li>
                         <li class="summary">개요 : Vue.js의 공부를 겸해 스스로 사용하고 싶은 ToDo Wep App을 만들고 싶어서 제작했습니다.<li>
+                        <li class="dev_date">개발기간 : 2021. 08. 07 ~ 2021. 08. 17</li>
                         <li class="function">기능 : ToDo 작성, 중요도 관리, 그룹관리, 패턴지정<li>
                         <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>
                     </ul>
@@ -185,12 +195,13 @@
                         <li class="title">GUI 이미지파일 편집</li>
                         <li class="modal_image3"></li>
                         <li class="summary">개요 : 여러가지 사진을 통합하여 편하게 관리할 수 있도록 편집해주는 프로그램을 제작해보고 싶었습니다. </li>
+                        <li class="dev_date">개발기간 : 2020. 11. 28 ~ 2020. 12. 13</li>
                         <li class="function">기능 : 여러 이미지를 통합해서 하나의 사진으로 만듦, 간격 조정, 여백 생성, 파일 포멧 변경</li> 
                         <li class="usedSkill">사용한 스킬 : Python(tkinter)</li> 
                     </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
