complete CSS of About Me

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,9 +44,10 @@
         <div class="aboutMe">
             <span>About Me</span>
             <div class="content">
-                <div class="my_image"></div>
+                <div class="my_image"><img src="./image/user1.jpg" alt=""></div>
                 <div class="info">
                     <ul class="persnal_info">
+                        <span>Introduction</span>
                         <li class="name">백엔드 개발자를 꿈 꾸고 있는 <strong>최종인</strong>입니다.</li>
                         <li class="hobby">취미 : 코딩, 탁구</li>
                         <!-- <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
