complete CSS of footer

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -146,7 +146,7 @@
         <!-- project -->
         <a name="project"></a>
         <div class="project">
-            <h1>PROJECT</h1>
+            <span>PROJECT</span>
             <div class="slideWrab">
                 <input type="radio" id="slide1" name="slide" class="slide" checked>
                 <input type="radio" id="slide2" name="slide" class="slide">
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <!-- modal -->
-            <!-- <div class="modal">
+            <div class="modal">
                 <div class="modal_content">
                     <ul class="modalContent">
                         <li class="title">Yourima 중고품 EC Site</li>                        
@@ -202,7 +202,7 @@
                     </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 
@@ -215,15 +215,15 @@
     <!-- contect -->
     <a name="contect"></a>
     <div class="footer">
-        <span>contect</span>
-        <ul class="contect_list">
+        <span class="title">contect</span>
+        <div class="contect_list">
             <li><i class="fas fa-envelope-open-text"></i><p>bill1224@naver.com</p></li>
-            <div class="contect_icons">
+            <ul class="contect_icons">
                 <li><a href="https://github.com/jongin1004"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://bill1224.tistory.com/"><i class="fas fa-blog"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UC0xxXkIx7uTOQ11-fUEx6kA"><i class="fab fa-youtube"></i></a></li>
-            </div>
-        </ul>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
