complete CSS of skil

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -63,9 +63,9 @@
             </div>
         </div>
 
-        <!-- <a name="skill"></a>
+        <a name="skill"></a>
         <div class="skill">
-            <h1>Skill Stack</h1>
+            <span>Skill Stack</span>
             <div class="stack_container">
                 <div class="part1">
                     <div class="frontEnd">
@@ -73,15 +73,15 @@
                         <ul class="stackList">
                             <li>
                                 <i class="fab fa-html5"></i>
-                                <div class="captin">HTML5</div>
+                                <div class="captin"><span>HTML5</span></div>
                             </li>
                             <li>
                                 <i class="fab fa-css3-alt"></i>
-                                <div class="captin">CSS3</div>
+                                <div class="captin"><span>CSS3</span></div>
                             </li>
                             <li>
                                 <i class="fab fa-js-square"></i>
-                                <div class="captin">JS</div>
+                                <div class="captin"><span>JS</span></div>
                             </li>
                         </ul>
                     </div>
@@ -90,15 +90,15 @@
                         <ul class="stackList">
                             <li>
                                 <i class="fab fa-php"></i>
-                                <div class="captin">PHP</div>
+                                <div class="captin"><span>PHP</span></div>
                             </li>
                             <li>
                                 <i class="fab fa-python"></i>
-                                <div class="captin">Python</div>
+                                <div class="captin"><span>Python</span></div>
                             </li>
                             <li>
                                 <i class="far fa-gem"></i>
-                                <div class="captin">Ruby</div>
+                                <div class="captin"><span>Ruby</span></div>
                             </li>
                         </ul>
                     </div>
@@ -110,15 +110,15 @@
                         <ul class="stackList">
                             <li>
                                 <i id="demo" class="fab fa-laravel"></i>
-                                <div class="captin">Laravel</div>
+                                <div class="captin"><span>Laravel</span></div>
                             </li>
                             <li>
                                 <i class="fab fa-vuejs"></i>
-                                <div class="captin">Vue.js</div>
+                                <div class="captin"><span>Vue</span>.js</div>
                             </li>
                             <li>
                                 <i class="far fa-gem"></i>
-                                <div class="captin">Ruby on Rails</div>
+                                <div class="captin"><span>Ruby</span> on Rails</div>
                             </li>
                         </ul>
                     </div>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- project -->
         <a name="project"></a>
