--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,20 +44,39 @@
         <div class="aboutMe">
             <span>About Me</span>
             <div class="content">
-                <div class="my_image"><img src="./image/user1.jpg" alt=""></div>
+                <div class="my_image">
+                    <!-- <img src="./image/user1.jpg" alt=""> -->
+                </div>
                 <div class="info">
                     <ul class="persnal_info">
                         <span>Introduction</span>
-                        <li class="name">백엔드 개발자를 꿈 꾸고 있는 <strong>최종인</strong>입니다.</li>
-                        <li class="hobby">취미 : 코딩, 탁구</li>
-                        <!-- <li class="motto">좌우명 : 실패에 겁먹지말고, 일단 한번 해보자!</li>
-                                        <li class="think"><p>저는 좋은 IT엔지니어가 되기 위해서는 주변사람들과의 원활한 커뮤니케이션이 필요하다고 생각합니다.</p><br><p>그래서, 대학생시절부터 공부회에 참가해 지금까지도 유지하고 있고, 개인블로그나 github, 유튜브에도 공부한 내용들을 다른 사람들과 공유하기 위해 노력하고 있습니다.</p></li>                 -->
+                        <li class="name">
+                            <p class="aco_title">소개</p>
+                            <div class="con">백엔드 개발자</div>
+                        </li>
+                        <li class="hobby">
+                            <p class="aco_title">취미</p>
+                            <div class="con">코딩, 탁구</div>
+                        </li>
+                        <li class="motto">
+                            <p class="aco_title">좌우명</p>
+                            <div class="con">해보자</div>
+                        </li>
+                        <li class="goal">
+                            <p class="aco_title">목표</p>
+                            <div class="con">가능</div>
+                        </li>                        
                     </ul>
                     <ul class="certification_info">
                         <span class="title">Certification</span>
-                        <li>정보처리기사</li>
-                        <li>JLPT N1</li>
-                        <li>TOEIC 670점</li>
+                        <li class="goal">
+                            <p class="aco_title">목표</p>
+                            <ul class="con">
+                                <li>정보처리기사</li>
+                                <li>JLPT N1</li>
+                                <li>TOEIC 670점</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>                
             </div>
