--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -52,25 +52,28 @@
                         <span>Introduction</span>
                         <li class="name">
                             <p class="aco_title">소개</p>
-                            <div class="con">백엔드 개발자</div>
+                            <div class="con">백엔드분야를 중점적으로 공부하고 있는 최종인입니다.</div>
                         </li>
                         <li class="hobby">
                             <p class="aco_title">취미</p>
-                            <div class="con">코딩, 탁구</div>
+                            <ul class="con">
+                                <li>코딩</li>
+                                <li>탁구</li>
+                            </ul>
                         </li>
                         <li class="motto">
                             <p class="aco_title">좌우명</p>
-                            <div class="con">해보자</div>
+                            <div class="con">실패를 무서워하지 말고, 일단 한번 해보자!</div>
                         </li>
                         <li class="goal">
                             <p class="aco_title">목표</p>
-                            <div class="con">가능</div>
+                            <div class="con">IT를 이용해서, 불가능했던 것을 가능하게하는 엔지니어가 되고싶습니다.</div>
                         </li>                        
                     </ul>
                     <ul class="certification_info">
                         <span class="title">Certification</span>
                         <li class="goal">
-                            <p class="aco_title">목표</p>
+                            <p class="aco_title">자격증 종류</p>
                             <ul class="con">
                                 <li>정보처리기사</li>
                                 <li>JLPT N1</li>
