modify CSS of aboutMe part

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -44,9 +44,7 @@
         <div class="aboutMe">
             <span>About Me</span>
             <div class="content">
-                <div class="my_image">
-                    <!-- <img src="./image/user1.jpg" alt=""> -->
-                </div>
+                <div class="my_image"></div>
                 <div class="info">
                     <ul class="persnal_info">
                         <span>Introduction</span>
